fix checkbox alignment

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -17,7 +17,7 @@ html.cyclops {
     margin-bottom: @form-group-margin-bottom;
     border-bottom: 1px solid @borderColor;
     width: 100%;
-    
+
     .description {
       font-size: 13px;
       line-height: 20px;
@@ -43,6 +43,7 @@ html.cyclops {
   // Position radios and checkboxes better
   input[type="radio"],
   input[type="checkbox"] {
+    margin: 4px 0 0;
     margin: 1px \9 0 0; // IE8-9
     line-height: normal;
   }
@@ -169,7 +170,7 @@ html.cyclops {
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
-    
+
     label {
       min-height: @line-height-computed; // Ensure the input doesn't jump when there is no text
       padding-left: 20px;
@@ -269,7 +270,7 @@ html.cyclops {
     // Remove default margin from `p`
     margin-bottom: 0;
     min-height: (@line-height-computed + @font-size-base);
-    
+
     &.input-lg,
     &.input-sm {
       padding-left: 0;
@@ -315,7 +316,7 @@ html.cyclops {
       margin-top: 0;
       margin-bottom: 0;
       vertical-align: middle;
-      
+
       label {
         padding-left: 0;
       }
@@ -358,7 +359,7 @@ html.cyclops {
     // Make form groups behave like rows
     .form-group {
       .make-row();
-      
+
       @media (min-width: @screen-sm-min) {
         input + p {
           padding-top: @padding-base-vertical;
@@ -374,7 +375,7 @@ html.cyclops {
     // space out inputs that are stacked, but remove the spacing if adjacent
     .form-control + .form-control {
       margin-top: 10px;
-      
+
       &.w10,
       &.w20,
       &.w30,
@@ -419,10 +420,10 @@ html.cyclops {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    
+
     &.disabled {
       cursor: not-allowed;
-      
+
       label {
         cursor: not-allowed;
       }
@@ -462,7 +463,7 @@ html.cyclops {
       width: 200%;
       margin-left: -100%;
       transition: margin 0.3s ease-in 0s;
-      
+
       .affirmative,
       .negative {
         display: block;
